# pcolonist

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-windows.bat  main.cpp  vcpkg.json
assets/maps/: biomes.ppm  debug_preview.html  generation_quality.json  heightmap.pgm  landmarks.json  material_grass.pgm  material_rock.pgm  material_sand.pgm  material_volcanic.pgm  material_wetness.pgm  moisture.pgm  slope.pgm  terrain_report.json  walkability.pgm  world_config.json
assets/models/: bush.mtl  grotto.mtl  palm.mtl  rock.mtl  tree.mtl
assets/models/kenney/: Campfire_01.mtl  Fallen_Trunk_01.mtl  Large_Oak_Green_01.mtl  Mushroom_Red_01.mtl  Tent_01.mtl  Wood_Fence_01.mtl
assets/scripts/: gameplay_goals.json  island_locations_100.json  island_world_design.json  island_world_redesign_plan.json  models.scene  startup.script
assets/scripts/chunks/: scene_-1_-1.scene  scene_-1_-2.scene  scene_-1_-3.scene  scene_-1_-4.scene  scene_-1_0.scene  scene_-1_1.scene  scene_-1_2.scene  scene_-1_3.scene  scene_-2_-2.scene  scene_-2_-3.scene  scene_-2_-4.scene  scene_-2_1.scene  scene_-2_2.scene  scene_-2_3.scene  scene_-3_-1.scene  scene_-3_-2.scene  scene_-3_-3.scene  scene_-3_-4.scene  scene_-3_1.scene  scene_-3_2.scene  scene_-3_3.scene  scene_-4_-1.scene  scene_-4_-2.scene  scene_-4_-3.scene  scene_-4_0.scene  scene_-4_1.scene  scene_-4_2.scene  scene_-5_-1.scene  scene_-5_-2.scene  scene_-5_0.scene  scene_-5_1.scene  scene_0_-1.scene  scene_0_-2.scene  scene_0_-3.scene  scene_0_-4.scene  scene_0_0.scene  scene_0_2.scene  scene_0_3.scene  scene_1_-1.scene  scene_1_-2.scene  (+24 more)
assets/shaders/: basic.frag  basic.vert  post.frag  post.vert  shadow.vert  sky.frag  sky.vert  ui.frag  ui.vert
docs/: island_scale_3_plan.md  project_call_flow.md
include/pcolonist/animation/: AnimationSystem.hpp
include/pcolonist/assets/: AssetSystem.hpp  MeshLoader.hpp  ObjLoader.hpp  ResourceManager.hpp
include/pcolonist/audio/: AudioSystem.hpp
include/pcolonist/core/: Application.hpp  ApplicationConfig.hpp  EventBus.hpp  Events.hpp  FixedTimestep.hpp  FrameLimiter.hpp  FramePipeline.hpp  JobSystem.hpp  RuntimeOptions.hpp
include/pcolonist/ecs/: Components.hpp  Registry.hpp
include/pcolonist/gameplay/: BuildingPlacementSystem.hpp  CraftingSystem.hpp  DiscoverySystem.hpp  Enemy.hpp  Inventory.hpp  Player.hpp  PlayerVitals.hpp  ResourceHarvestingSystem.hpp  SurvivalSystem.hpp
include/pcolonist/memory/: FrameArena.hpp
include/pcolonist/physics/: PhysicsSystem.hpp
include/pcolonist/platform/: Input.hpp
include/pcolonist/render/: Camera.hpp  Mesh.hpp  MeshFactory.hpp  PngLoader.hpp  Renderer.hpp  RendererBackend.hpp  Shader.hpp  ShaderLibrary.hpp  Skybox.hpp  VulkanSupport.hpp
include/pcolonist/scripting/: ScriptSystem.hpp
include/pcolonist/serialization/: SaveGameSerializer.hpp  SceneSerializer.hpp
include/pcolonist/ui/: DebugUi.hpp  Localization.hpp  MainMenu.hpp  PauseMenu.hpp  UiSystem.hpp
include/pcolonist/world/: AssetManager.hpp  Chunk.hpp  ChunkManager.hpp  WaterWaves.hpp  WeatherSystem.hpp  WorldStreamer.hpp
src/animation/: AnimationSystem.cpp
src/assets/: Assets.cpp  MeshLoader.cpp  ObjLoader.cpp
src/audio/: AudioSystem.cpp
src/core/: Application.cpp  FrameLimiter.cpp  FramePipeline.cpp  JobSystem.cpp  RuntimeOptions.cpp
src/gameplay/: BuildingPlacementSystem.cpp  CraftingSystem.cpp  DiscoverySystem.cpp  Enemy.cpp  Inventory.cpp  Player.cpp  PlayerVitals.cpp  ResourceHarvestingSystem.cpp  SurvivalSystem.cpp
src/memory/: FrameArena.cpp
src/physics/: PhysicsSystem.cpp  StaticColliderGrid.cpp  TerrainCollider.cpp
src/platform/: Input.cpp
src/render/: Camera.cpp  MeshFactory.cpp  PngLoader.cpp  Renderer.cpp  RendererTargets.cpp  Shader.cpp  ShaderLibrary.cpp  Skybox.cpp  VulkanSupport.cpp
src/scripting/: ScriptSystem.cpp
src/serialization/: SaveGameSerializer.cpp  SceneSerializer.cpp
src/ui/: DebugUi.cpp  MainMenu.cpp  PauseMenu.cpp  UiSystem.cpp
src/world/: AssetManager.cpp  Chunk.cpp  ChunkManager.cpp  WaterWaves.cpp  WeatherSystem.cpp  WorldStreamer.cpp
tests/: AssetSystemTests.cpp  BuildingPlacementTests.cpp  InventoryTests.cpp  ObjLoaderTests.cpp  PlayerVitalsTests.cpp  PngLoaderTests.cpp  ResourceHarvestingTests.cpp  SaveGameSerializerTests.cpp  ScriptSystemTests.cpp  TerrainColliderTests.cpp  WorldSystemTests.cpp
tools/: generate_island.py  generate_nature_models.py  import_island_to_blender.py  import_model.py  refine_imported_models.py
tools/island_generator/: __init__.py  cli.py  pipeline.py  runtime.py
